# mcp-pascal-editor

./: .gitignore  AGENTS.md  README.md  descriptions.yaml  mcp.json  pyproject.toml
bridge/: McpBridge.tsx
src/mcp_editor/: __init__.py  backend.py  models.py  prompts.py  resources.py  server.py  state.py
src/mcp_editor/tools/: zustand_action.py
